Fixed header overflow

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -43,13 +43,13 @@ nav {
   box-sizing: border-box;
   position: sticky;
   top: 0;
-  width: 100%;
   z-index: 1;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   padding: 0;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 800px) {
